[package]
name = "bitmask"
version = "0.1.1"
authors = ["Delyan Dobrev <delqn.dobrev@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A bitmask generator for enum scoped bit flags."
homepage = "https://github.com/d3lio/bitmask"
repository = "https://github.com/d3lio/bitmask"

[dependencies]
